--- a/hombres.html
+++ b/hombres.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio - Tienda AEV</title>
+    <title>Hombres - Tienda AEV</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
-
 <body>
 
-    <!-- HEADER SUPERIOR -->
+    <!-- HEADER -->
     <header class="top-bar">
         <div class="logo">AEV</div>
 
@@ -17,52 +16,41 @@
             <a href="hombres.html">HOMBRES</a>
             <a href="mujer.html">MUJER</a>
             <a href="ninos.html">NIÑOS</a>
-            <a href="regalos.html">REGALOS</a>
-            <a href="venta.html">VENTA</a>
-            <a href="nuevo.html">NUEVO Y TENDENCIAS</a>
+            <a href="#">REGALOS</a>
+            <a href="#">VENTA</a>
+            <a href="#">NUEVO Y TENDENCIAS</a>
         </nav>
 
         <div class="icons">
-            <img src="icons/search.svg" alt="Buscar">
-            <img src="icons/heart.svg" alt="Favoritos">
-            <img src="icons/cart.svg" alt="Carrito">
-            <img src="icons/user.svg" alt="Usuario">
+            <img src="icons/search.svg">
+            <img src="icons/heart.svg">
+            <img src="icons/cart.svg">
+            <img src="icons/user.svg">
         </div>
     </header>
 
-    <!-- SECCIÓN DE OFERTAS -->
-    <h2 class="titulo-ofertas">OFERTAS</h2>
+    <h2 class="titulo-ofertas">COLECCIÓN HOMBRES</h2>
 
     <section class="ofertas-contenedor">
-
         <div class="card">
-            <a href="venta.html">
-                <img src="img/camiseta-futbol.jpg" alt="Camisetas de Futbol">
-                <p>CAMISETAS DE FUTBOL</p>
-            </a>
+            <img src="img/hombres/camisa.jpg" alt="Camisa">
+            <p>Camisa Casual</p>
         </div>
 
         <div class="card">
-            <a href="mujer.html">
-                <img src="img/boutique.jpg" alt="Boutique">
-                <p>BOUTIQUE</p>
-            </a>
+            <img src="img/hombres/jeans.jpg" alt="Jeans">
+            <p>Jeans Clásicos</p>
         </div>
 
         <div class="card">
-            <a href="regalos.html">
-                <img src="img/tenis.jpg" alt="Tenis">
-                <p>CALZADO EN DESCUENTO</p>
-            </a>
+            <img src="img/hombres/sudadera.jpg" alt="Sudadera">
+            <p>Sudadera Deportiva</p>
         </div>
 
         <div class="card">
-            <a href="nuevo.html">
-                <img src="img/familia-navidad.jpg" alt="Ropa navideña">
-                <p>NUEVAS TENDENCIAS</p>
-            </a>
+            <img src="img/hombres/chaqueta.jpg" alt="Chaqueta">
+            <p>Chaqueta de Moda</p>
         </div>
-
     </section>
 <footer class="footer">
     <div class="footer-container">
@@ -111,6 +99,7 @@
         <p>© 2025 AEV Store — Todos los derechos reservados.</p>
     </div>
 </footer>
+
 
 </body>
 </html>
