--- a/regalos.html
+++ b/regalos.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio - Tienda AEV</title>
+    <title>Regalos - Ropa en Descuento</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
 
-    <!-- HEADER SUPERIOR -->
+    <!-- HEADER -->
     <header class="top-bar">
         <div class="logo">AEV</div>
 
@@ -23,44 +23,35 @@
         </nav>
 
         <div class="icons">
-            <img src="icons/search.svg" alt="Buscar">
-            <img src="icons/heart.svg" alt="Favoritos">
-            <img src="icons/cart.svg" alt="Carrito">
-            <img src="icons/user.svg" alt="Usuario">
+            <img src="icons/search.svg">
+            <img src="icons/heart.svg">
+            <img src="icons/cart.svg">
+            <img src="icons/user.svg">
         </div>
     </header>
 
-    <!-- SECCIÓN DE OFERTAS -->
-    <h2 class="titulo-ofertas">OFERTAS</h2>
+    <h2 class="titulo-ofertas">REGALOS – ROPA EN DESCUENTO</h2>
 
     <section class="ofertas-contenedor">
 
         <div class="card">
-            <a href="venta.html">
-                <img src="img/camiseta-futbol.jpg" alt="Camisetas de Futbol">
-                <p>CAMISETAS DE FUTBOL</p>
-            </a>
+            <img src="img/regalos/descuento1.jpg">
+            <p>Abrigo 30% OFF</p>
         </div>
 
         <div class="card">
-            <a href="mujer.html">
-                <img src="img/boutique.jpg" alt="Boutique">
-                <p>BOUTIQUE</p>
-            </a>
+            <img src="img/regalos/descuento2.jpg">
+            <p>Sudadera 25% OFF</p>
         </div>
 
         <div class="card">
-            <a href="regalos.html">
-                <img src="img/tenis.jpg" alt="Tenis">
-                <p>CALZADO EN DESCUENTO</p>
-            </a>
+            <img src="img/regalos/descuento3.jpg">
+            <p>Camisa Casual 40% OFF</p>
         </div>
 
         <div class="card">
-            <a href="nuevo.html">
-                <img src="img/familia-navidad.jpg" alt="Ropa navideña">
-                <p>NUEVAS TENDENCIAS</p>
-            </a>
+            <img src="img/regalos/descuento4.jpg">
+            <p>Pantalón Deportivo 20% OFF</p>
         </div>
 
     </section>
