--- a/hombres.html
+++ b/hombres.html
@@ -16,9 +16,9 @@
             <a href="hombres.html">HOMBRES</a>
             <a href="mujer.html">MUJER</a>
             <a href="ninos.html">NIÑOS</a>
-            <a href="#">REGALOS</a>
-            <a href="#">VENTA</a>
-            <a href="#">NUEVO Y TENDENCIAS</a>
+            <a href="regalos.html">REGALOS</a>
+            <a href="venta.html">VENTA</a>
+            <a href="nuevo.html">NUEVO Y TENDENCIAS</a>
         </nav>
 
         <div class="icons">
