--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         </nav>
 
         <div class="icons">
-            <img src="icons/search.svg" alt="Buscar">
-            <img src="icons/heart.svg" alt="Favoritos">
-            <img src="icons/cart.svg" alt="Carrito">
-            <img src="icons/user.svg" alt="Usuario">
+            <img src="icons/search.png" alt="Buscar">
+            <img src="icons/heart.png" alt="Favoritos">
+            <img src="icons/cart.png" alt="Carrito">
+            <img src="icons/user.png" alt="Usuario">
         </div>
     </header>
 
