--- a/mujer.html
+++ b/mujer.html
@@ -21,10 +21,10 @@
         </nav>
 
         <div class="icons">
-            <img src="icons/search.svg">
-            <img src="icons/heart.svg">
-            <img src="icons/cart.svg">
-            <img src="icons/user.svg">
+            <img src="icons/search.png">
+            <img src="icons/heart.png">
+            <img src="icons/cart.png">
+            <img src="icons/user.png">
         </div>
     </header>
 
