--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio - Tienda AEV</title>
+    <title>Inicio - Tienda YEA</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
 
@@ -11,7 +11,11 @@
 
     <!-- HEADER SUPERIOR -->
     <header class="top-bar">
-        <div class="logo">AEV</div>
+        <div class="logo">
+        <a href="index.html">
+        <img src="img/logo-aev.png" alt="Logo de AEV Tienda">
+    </a>
+</div>
 
         <nav class="menu">
             <a href="hombres.html">HOMBRES</a>
@@ -108,7 +112,7 @@
     </div>
 
     <div class="footer-bottom">
-        <p>© 2025 AEV Store — Todos los derechos reservados.</p>
+        <p>© 2025 YEA Store — Todos los derechos reservados.</p>
     </div>
 </footer>
 
