--- a/hombres.html
+++ b/hombres.html
@@ -10,7 +10,7 @@
 
     <!-- HEADER -->
     <header class="top-bar">
-        <div class="logo">AEV</div>
+        <div class="logo">YEA</div>
 
         <nav class="menu">
             <a href="hombres.html">HOMBRES</a>
