--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </div>
 
         <div class="footer-column">
-            <h3>Políticas</h3>
+            <h3>Politicas</h3>
             <ul>
                 <li><a href="#">Política de privacidad</a></li>
                 <li><a href="#">Términos y condiciones</a></li>
