--- a/mujer.html
+++ b/mujer.html
@@ -9,7 +9,7 @@
 <body>
 
     <header class="top-bar">
-        <div class="logo">AEV</div>
+        <div class="logo">YEA</div>
 
         <nav class="menu">
             <a href="hombres.html">HOMBRES</a>
