--- a/venta.html
+++ b/venta.html
@@ -76,10 +76,9 @@
 
         <div class="footer-column">
             <h3>Sucursales</h3>
-            <ul>
-               <p>Cochabamba-Bolivia</p>
-                <p>Santa Cruz-Bolivia<p>
-                <p>La Paz-Bolivia</p>
+            <p>Cochabamba-Bolivia</p>
+            <p>Santa Cruz-Bolivia</p>
+            <p>La Paz-Bolivia</p>
             </ul>
         </div>
 
