--- a/index.html
+++ b/index.html
@@ -88,19 +88,17 @@
         </div>
 
         <div class="footer-column">
-            <h3>Politicas</h3>
-            <ul>
-                <li><a href="#">Política de privacidad</a></li>
-                <li><a href="#">Términos y condiciones</a></li>
-                <li><a href="#">Política de envíos</a></li>
-                <li><a href="#">Política de devoluciones</a></li>
+            <h3>Sucursales</h3>
+            <p>Cochabamba-Bolivia</p>
+            <p>Santa Cruz-Bolivia</p>
+            <p>La Paz-Bolivia</p>
             </ul>
         </div>
 
         <div class="footer-column">
             <h3>Contáctanos</h3>
-            <p>Email: soporte@aevstore.com</p>
-            <p>Tel: +52 000 000 0000</p>
+            <p>Email: yeavisionropa@gmail.com</p>
+            <p>Tel: +591 75955155</p>
 
             <div class="footer-social">
                 <a href="#">Instagram</a>
