--- a/boutique.html
+++ b/boutique.html
@@ -38,25 +38,25 @@
 
         <!-- Producto 1 -->
         <div class="card">
-            <img src="img/boutique1.jpg" alt="Conjunto elegante mujer">
+            <img src="img/boutique/boutique1.jpg" alt="Conjunto elegante mujer">
             <p>Conjunto Elegante Premium</p>
         </div>
 
         <!-- Producto 2 -->
         <div class="card">
-            <img src="img/boutique2.jpg" alt="Vestido moderno">
+            <img src="img/boutique/boutique2.jpg" alt="Vestido moderno">
             <p>Vestido Moderno 2025</p>
         </div>
 
         <!-- Producto 3 -->
         <div class="card">
-            <img src="img/boutique3.jpg" alt="Blusa de moda">
+            <img src="img/boutique/boutique3.jpg" alt="Blusa de moda">
             <p>Blusa de Moda</p>
         </div>
 
         <!-- Producto 4 -->
         <div class="card">
-            <img src="img/boutique4.jpg" alt="Chaqueta elegante">
+            <img src="img/boutique/boutique4.jpg" alt="Chaqueta elegante">
             <p>Chaqueta Estilo Boutique</p>
         </div>
 
