--- a/calzados-en-descuento.html
+++ b/calzados-en-descuento.html
@@ -38,25 +38,25 @@
 
         <!-- Producto 1 -->
         <div class="card">
-            <img src="img/calzado1.jpg" alt="Tenis deportivos">
+            <img src="img/calzados-en-descuento/calzado1.jpg" alt="Tenis deportivos">
             <p>Tenis Deportivos Premium</p>
         </div>
 
         <!-- Producto 2 -->
         <div class="card">
-            <img src="img/calzado2.jpg" alt="Zapatillas Urbanas">
+            <img src="img/calzados-en-descuento/calzado2.jpg" alt="Zapatillas Urbanas">
             <p>Zapatillas Urbanas 2025</p>
         </div>
 
         <!-- Producto 3 -->
         <div class="card">
-            <img src="img/calzado3.jpg" alt="Tenis clásicos">
+            <img src="img/calzados-en-descuento/calzado3.jpg" alt="Tenis clásicos">
             <p>Tenis Clásicos en Oferta</p>
         </div>
 
         <!-- Producto 4 -->
         <div class="card">
-            <img src="img/calzado4.jpg" alt="Tenis unisex">
+            <img src="img/calzados-en-descuento/calzado4.jpg" alt="Tenis unisex">
             <p>Tenis Unisex Descuento Especial</p>
         </div>
 
