--- a/camisetas-futbol.html
+++ b/camisetas-futbol.html
@@ -38,25 +38,25 @@
 
         <!-- Producto 1 -->
         <div class="card">
-            <img src="img/camiseta1.jpg" alt="Camiseta selección 1">
+            <img src="img/camisetas-futbol/camiseta1.jpg" alt="Camiseta selección 1">
             <p>Camiseta Oficial Selección 2025</p>
         </div>
 
         <!-- Producto 2 -->
         <div class="card">
-            <img src="img/camiseta2.jpg" alt="Camiseta Club 1">
+            <img src="img/camisetas-futbol/camiseta2.jpg" alt="Camiseta Club 1">
             <p>Camiseta Club Profesional</p>
         </div>
 
         <!-- Producto 3 -->
         <div class="card">
-            <img src="img/camiseta3.jpg" alt="Camiseta selección 2">
+            <img src="img/camisetas-futbol/camiseta3.jpg" alt="Camiseta selección 2">
             <p>Camiseta Entrenamiento Premium</p>
         </div>
 
         <!-- Producto 4 -->
         <div class="card">
-            <img src="img/camiseta4.jpg" alt="Camiseta Club 2">
+            <img src="img/camisetas-futbol/camiseta4.jpg" alt="Camiseta Club 2">
             <p>Camiseta Edición Especial</p>
         </div>
 
