--- a/regalos.html
+++ b/regalos.html
@@ -36,22 +36,26 @@
 
         <div class="card">
             <img src="img/regalos/descuento1.jpg">
-            <p>Abrigo 30% OFF</p>
+            <p>Abrigo </p>
+            <p>Bs. 220</p>
         </div>
 
         <div class="card">
             <img src="img/regalos/descuento2.jpg">
-            <p>Sudadera 25% OFF</p>
+            <p>Sudadera</p>
+            <p>Bs. 150</p>
         </div>
 
         <div class="card">
             <img src="img/regalos/descuento3.jpg">
-            <p>Camisa Casual 40% OFF</p>
+            <p>Camisa Casual</p>
+            <p>Bs. 220</p>
         </div>
 
         <div class="card">
             <img src="img/regalos/descuento4.jpg">
-            <p>Pantalón Deportivo 20% OFF</p>
+            <p>Conjunto deportivo</p>
+            <p>Bs. 280</p>
         </div>
 
     </section>
