--- a/calzados-en-descuento.html
+++ b/calzados-en-descuento.html
@@ -9,9 +9,13 @@
 
 <body>
 
-    <!-- HEADER SUPERIOR -->
+<!-- HEADER SUPERIOR -->
     <header class="top-bar">
-        <div class="logo">AEV</div>
+        <div class="logo">
+        <a href="index.html">
+        <img src="img/logo-aev.png" alt="Logo de AEV Tienda">
+    </a>
+</div>
 
         <nav class="menu">
             <a href="hombres.html">HOMBRES</a>
