--- a/ninos.html
+++ b/ninos.html
@@ -8,8 +8,13 @@
 </head>
 <body>
 
+<!-- HEADER SUPERIOR -->
     <header class="top-bar">
-        <div class="logo">YEA</div>
+        <div class="logo">
+        <a href="index.html">
+        <img src="img/logo-aev.png" alt="Logo de AEV Tienda">
+    </a>
+</div>
 
         <nav class="menu">
             <a href="hombres.html">HOMBRES</a>
