--- a/regalos.html
+++ b/regalos.html
@@ -9,9 +9,13 @@
 
 <body>
 
-    <!-- HEADER -->
+<!-- HEADER SUPERIOR -->
     <header class="top-bar">
-        <div class="logo">YEA</div>
+        <div class="logo">
+        <a href="index.html">
+        <img src="img/logo-aev.png" alt="Logo de AEV Tienda">
+    </a>
+</div>
 
         <nav class="menu">
             <a href="hombres.html">HOMBRES</a>
