--- a/calzados-en-descuento.html
+++ b/calzados-en-descuento.html
@@ -44,24 +44,28 @@
         <div class="card">
             <img src="img/calzados-en-descuento/calzado1.jpg" alt="Tenis deportivos">
             <p>Tenis Deportivos Premium</p>
+            <p>Bs. 1550</p>
         </div>
 
         <!-- Producto 2 -->
         <div class="card">
             <img src="img/calzados-en-descuento/calzado2.jpg" alt="Zapatillas Urbanas">
             <p>Zapatillas Urbanas 2025</p>
+            <p>Bs. 950</p>
         </div>
 
         <!-- Producto 3 -->
         <div class="card">
             <img src="img/calzados-en-descuento/calzado3.jpg" alt="Tenis clásicos">
             <p>Tenis Clásicos en Oferta</p>
+            <p>Bs. 700</p>
         </div>
 
         <!-- Producto 4 -->
         <div class="card">
             <img src="img/calzados-en-descuento/calzado4.jpg" alt="Tenis unisex">
-            <p>Tenis Unisex Descuento Especial</p>
+            <p>Tenis Unisex </p>
+            <p>Bs. 950 </p>
         </div>
 
     </section>
