--- a/camisetas-futbol.html
+++ b/camisetas-futbol.html
@@ -43,25 +43,29 @@
         <!-- Producto 1 -->
         <div class="card">
             <img src="img/camisetas-futbol/camiseta1.jpg" alt="Camiseta selección 1">
-            <p>Camiseta Oficial Selección 2025</p>
+            <p>Camiseta Oficial Selección Boliviana 2025</p>
+            <p>Bs. 220</p>
         </div>
 
         <!-- Producto 2 -->
         <div class="card">
             <img src="img/camisetas-futbol/camiseta2.jpg" alt="Camiseta Club 1">
             <p>Camiseta Club Profesional</p>
+            <p>Bs. 220</p>
         </div>
 
         <!-- Producto 3 -->
         <div class="card">
             <img src="img/camisetas-futbol/camiseta3.jpg" alt="Camiseta selección 2">
             <p>Camiseta Entrenamiento Premium</p>
+            <p>Bs. 150</p>
         </div>
 
         <!-- Producto 4 -->
         <div class="card">
             <img src="img/camisetas-futbol/camiseta4.jpg" alt="Camiseta Club 2">
             <p>Camiseta Edición Especial</p>
+            <p>Bs. 250</p>
         </div>
 
     </section>
