--- a/boutique.html
+++ b/boutique.html
@@ -90,15 +90,13 @@
                 </ul>
             </div>
 
-            <div class="footer-column">
-                <h3>Políticas</h3>
-                <ul>
-                    <li><a href="#">Política de privacidad</a></li>
-                    <li><a href="#">Términos y condiciones</a></li>
-                    <li><a href="#">Política de envíos</a></li>
-                    <li><a href="#">Política de devoluciones</a></li>
-                </ul>
-            </div>
+        <div class="footer-column">
+            <h3>Sucursales</h3>
+            <p>Cochabamba-Bolivia</p>
+            <p>Santa Cruz-Bolivia</p>
+            <p>La Paz-Bolivia</p>
+            </ul>
+        </div>
 
             <div class="footer-column">
                 <h3>Contáctanos</h3>
