--- a/camisetas-futbol.html
+++ b/camisetas-futbol.html
@@ -70,36 +70,52 @@
 
     </section>
 
-    <!-- FOOTER -->
-    <footer class="footer">
-        <div class="footer-container">
+<footer class="footer">
+    <div class="footer-container">
 
-            <div class="footer-column">
-                <h3>AEV TIENDA</h3>
-                <p>Moda para toda la familia.</p>
-                <p>Ropa, calzado y accesorios.</p>
+        <div class="footer-column">
+            <h3>AEV TIENDA</h3>
+            <p>Moda para toda la familia.</p>
+            <p>Ropa, calzado y accesorios.</p>
+        </div>
+
+        <div class="footer-column">
+            <h3>Enlaces</h3>
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="venta.html">Catálogo</a></li>
+                <li><a href="nuevo.html">Nuevo</a></li>
+                <li><a href="regalos.html">Ofertas</a></li>
+            </ul>
+        </div>
+
+        <div class="footer-column">
+            <h3>Sucursales</h3>
+            <p>Cochabamba-Bolivia</p>
+            <p>Santa Cruz-Bolivia</p>
+            <p>La Paz-Bolivia</p>
+            </ul>
+        </div>
+
+        <div class="footer-column">
+            <h3>Contáctanos</h3>
+            <p>Email: yeavisionropa@gmail.com</p>
+            <p>Tel: +591 75955155</p>
+
+            <div class="footer-social">
+                <a href="#">Instagram</a>
+                <a href="#">Facebook</a>
+                <a href="#">TikTok</a>
             </div>
+        </div>
 
-            <div class="footer-column">
-                <h3>Enlaces</h3>
-                <ul>
-                    <li><a href="index.html">Inicio</a></li>
-                    <li><a href="venta.html">Catálogo</a></li>
-                    <li><a href="nuevo.html">Nuevo</a></li>
-                    <li><a href="regalos.html">Ofertas</a></li>
-                </ul>
-            </div>
+    </div>
 
-            <div class="footer-column">
-                <h3>Políticas</h3>
-                <ul>
-                    <li><a href="#">Política de privacidad</a></li>
-                    <li><a href="#">Términos y condiciones</a></li>
-                    <li><a href="#">Política de envíos</a></li>
-                    <li><a href="#">Política de devoluciones</a></li>
-                </ul>
-            </div>
+    <div class="footer-bottom">
+        <p>© 2025 YEA Store — Todos los derechos reservados.</p>
+    </div>
+</footer>
 
-            <div class="footer-column">
-                <h3>Contáctanos</h3>
-                <p>Email: soporte@aevst
+
+</body>
+</html>
