--- a/hombres.html
+++ b/hombres.html
@@ -102,7 +102,7 @@
     </div>
 
     <div class="footer-bottom">
-        <p>© 2025 AEV Store — Todos los derechos reservados.</p>
+        <p>© 2025 YEA Store — Todos los derechos reservados.</p>
     </div>
 </footer>
 
